Change title from 'P-Stream' to 'Corridor'

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
     <!-- <meta name="referrer" content="no-referrer" /> -->
     <meta name="referrer" content="always" />
 
-    <title>P-Stream</title>
+    <title>Corridor</title>
 
     {{#if opensearchEnabled }}
     <!-- OpenSearch -->
     <link
       rel="search"
       type="application/opensearchdescription+xml"
-      title="P-Stream"
+      title="Corridor"
       href="/opensearch.xml"
     />
 
